cluster-config/dev/find/storedqueries/prod/container/container.yaml
---
---
# Source: container/templates/container-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: storedqueries
    app.kubernetes.io/instance: storedqueries-prod
  name: storedqueries-prod
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: storedqueries
    app.kubernetes.io/instance: storedqueries-prod
---

# Source: container/templates/container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storedqueries-prod
  namespace: default
  labels:
    app.kubernetes.io/name: storedqueries
    app.kubernetes.io/instance: storedqueries-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: storedqueries
      app.kubernetes.io/instance: storedqueries-prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: storedqueries
        app.kubernetes.io/instance: storedqueries-prod
    spec:
      containers:
      - name: storedqueries
        image: episerver.azurecr.io/episerver/find-services-storedqueries:0.1-develop-47603
        ports:
        - containerPort: 80
        resources: {}
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: azure
          mountPath: /mnt/azure
      restartPolicy: Always
      imagePullSecrets:
      - name: acr-auth
      volumes:
      - name: azure
        azureFile:
          secretName: fileshare-secrets
          shareName: optiq-logs-prod
          readOnly: false
status: {}
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-storedqueries-prod
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/storedqueries`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: storedqueries-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/storedqueries`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: storedqueries-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-storedqueries-prod-swagger
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/storedqueries-api/swagger`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-storedqueries-prod-api-prefix
    services:
    - name: storedqueries-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/storedqueries-api/swagger`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-storedqueries-prod-api-prefix
    services:
    - name: storedqueries-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-storedqueries-prod-health
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/storedqueries-service/health`) && Headers(`Ring`, `prod`)'
    kind: Rule
    middlewares:
    - name: replace-storedqueries-prod-service-health-path
    services:
    - name: storedqueries-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/storedqueries-service/health`)'
    kind: Rule
    middlewares:
    - name: replace-storedqueries-prod-service-health-path
    services:
    - name: storedqueries-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-storedqueries-prod-api-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /storedqueries-api/
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replace-storedqueries-prod-service-health-path
  namespace: default
spec:
  replacePath:
    path: /health
